[tool.poetry]
name = "chatapi"
version = "0.1.0"
description = ""
authors = ["dmrglu <mahsutdemiroglu@gmail.com>"]
readme = "README.md"
packages = [{include = "chatapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
